kubernetes/apps/ekineko/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ekineko
  labels:
    pod-security.kubernetes.io/enforce: restricted
