kubernetes/apps/ekineko/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ekineko
  namespace: ekineko
spec:
  parentRefs:
    - name: internal-gateway
      namespace: kube-system
      sectionName: https-internal-wildcard
  hostnames:
    - ekineko.${CLUSTER_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /ws
      backendRefs:
        - name: ekineko-server
          port: 8800
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ekineko-web
          port: 3000
